update recommendation-microservice and infrastructure(aws)